# AWS_MCP_Hackathon

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/settings/: mcp.json
.kiro/specs/content-publishing-mcp-evaluation/: content-monetization-design.md  design.md  requirements.md  tasks.md
.kiro/steering/: aws-agentic-ai-expert.md  basic.md  publishing-expert.md
scripts/: demo_mcp_server.py  run_mcp_server.py  test_access_control.py  test_brand_management.py  test_mcp_access_control.py
src/: __init__.py
src/mcp_server/: __init__.py  config.py  main.py  server.py
src/mcp_server/tools/: __init__.py  access_control_tools.py  analytics_tools.py  brand_tools.py  content_tools.py  pricing_tools.py
src/models/: __init__.py  access_control.py  brand.py  content.py  validation.py
src/schemas/: __init__.py  mcp_tools.py
src/services/: __init__.py  access_control_manager.py  brand_manager.py
src/tools/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_mcp_server.py  test_models.py
